--- a/docker/.env.example
+++ b/docker/.env.example
@@ -6,3 +6,5 @@ NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=changeme
 
 GRAFANA_ADMIN_PASSWORD=changeme
+
+NEXTCLOUD_DOMAIN=nextcloud.local  # Domain für Collabora
